--- a/nerdydy/Views/Shared/_Layout.cshtml
+++ b/nerdydy/Views/Shared/_Layout.cshtml
@@ -30,8 +30,11 @@
                     <li>
                         <a href="#"><i class="fa fa-fw fa-file-o"></i> Second page</a>
                     </li>
+
+                    //foreach "game":
+
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-fw fa-plus"></i> Dropdown <span class="arrow"></span></a>
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="gameIcon" style="background: url(../../GameIcons/59bec4742408c_rainbow_six_siege_logo_by_jmk_prime-.ico)"></span> Rainbow 6 <span class="arrow"></span></a>
                         <ul class="dropdown-menu" role="menu">
                             <li class="dropdown-header"><b>Dropdown heading</b></li>
                             <li><a href="#">Action</a></li>
@@ -60,7 +63,7 @@
                             @RenderBody()
                             <hr />
                             <footer>
-                                <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+                                <p>&copy; @DateTime.Now.Year - Nerdydy</p>
                             </footer>
                         </div>
 
