--- a/nerdydy/Views/Shared/_LoginPartial.cshtml
+++ b/nerdydy/Views/Shared/_LoginPartial.cshtml
@@ -9,8 +9,8 @@
 }
 else
 {
-    <li class="lgot">@*@Html.ActionLink("Logout", "Logout", "Account", routeValues: null, htmlAttributes: new { id = "logoutLink" })*@</li>
+    @*<li class="lgot">@Html.ActionLink("Logout", "Logout", "Account", routeValues: null, htmlAttributes: new { id = "logoutLink" })</li>
     <li class = "rgst">@Html.ActionLink("Register", "Register", "Account", routeValues: null, htmlAttributes: new { id = "registerLink" })</li>
-    <li class = "lgin">@Html.ActionLink("LogIn", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })</li>
+    <li class = "lgin">@Html.ActionLink("LogIn", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })</li>*@
 
 }
