--- a/nerdydy/Views/Shared/_Layout.cshtml
+++ b/nerdydy/Views/Shared/_Layout.cshtml
@@ -31,7 +31,7 @@
                     //foreach "game":
 
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="gameIcon" style="background: url(../../GameIcons/59bec4742408c_rainbow_six_siege_logo_by_jmk_prime-.ico)"></span> Rainbow 6 <span class="arrow"></span></a>
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown"> Rainbow 6 <span class="arrow"></span></a>
                         <ul class="dropdown-menu" role="menu">
                             <li class="dropdown-header"><b>Content</b></li>
                             <li><a href="#">Videos</a></li>
@@ -39,7 +39,7 @@
                         </ul>
                     </li>
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="gameIcon" style="background: url(../../GameIcons/59bec4742408c_rainbow_six_siege_logo_by_jmk_prime-.ico)"></span> PUBG <span class="arrow"></span></a>
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown"> PUBG <span class="arrow"></span></a>
                         <ul class="dropdown-menu" role="menu">
                             <li class="dropdown-header"><b>Content</b></li>
                             <li><a href="#">Videos</a></li>
@@ -47,7 +47,7 @@
                         </ul>
                     </li>
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="gameIcon" style="background: url(../../GameIcons/59bec4742408c_rainbow_six_siege_logo_by_jmk_prime-.ico)"></span> Rocket League <span class="arrow"></span></a>
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown"> Rocket League <span class="arrow"></span></a>
                         <ul class="dropdown-menu" role="menu">
                             <li class="dropdown-header"><b>Content</b></li>
                             <li><a href="#">Videos</a></li>
